[Fix] Show download on mobile

--- a/mm_web_app/styles/partials/_modal.scss
+++ b/mm_web_app/styles/partials/_modal.scss
@@ -22,7 +22,7 @@ the modal section
 .ReactModal__Overlay--after-open {}
 
 .ReactModal__Content {
-  width: 460px;
+  width: 500px;
   left: 50%;
   margin-left: -230px;
   animation: vex-flyin 0.5s;
@@ -39,7 +39,7 @@ the modal section
   padding: 30px 40px !important;
   border: 0 none;
   max-width: 100%;
-  width: 460px;
+  width: 500px;
   h2 {
     margin-bottom: 1.7rem;
     text-align: center;
